--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Spencer Debenport
 description: Microbial Eclogist in the Buckley Lab at Cornell University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ![gill_icon](/images/Gills_icon.jpg)
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
