--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Spencer Debenport
 
 # Short bio or description (displayed in the header)
-description: Microbial Eclogist in the Buckley Lab at Cornell University
+description: Microbial Ecologist in the Buckley Lab at Cornell University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/spencerJD/spencerJD.github.io/master/images/Gills_icon.png
